@@ -28,6 +28,7 @@ check_dual_life_versions = 0
 [Prereqs::Soften]
 module = Test::Tester
 module = PadWalker
+module = Import::Into
 copy_to = develop.requires
 to_relationship = suggests
 
